--- a/gambardesacangkuang.html
+++ b/gambardesacangkuang.html
@@ -17,7 +17,7 @@
    <hr>
    <div class="menu">
     <hr>
-    <a href="layout.html">MENU</a>
+    <a href="index.html">MENU</a>
     <hr>
     <a href="pengertiancss.html">|DEVINISI CSS|</a>
     <hr>
