--- a/sejarahcandicangkuang.html
+++ b/sejarahcandicangkuang.html
@@ -22,7 +22,7 @@
    </div>
    <div class="menu">
     <hr>
-    <a href="layout.html">|MENU|</a>
+    <a href="index.html">|MENU|</a>
     <hr>
     <a href="pengertiancss.html">|DEVINISI CSS|</a>
     <hr>
