--- a/sejarahcandicangkuang.html
+++ b/sejarahcandicangkuang.html
@@ -22,7 +22,7 @@
    </div>
    <div class="menu">
     <hr>
-    <a href="index.html.html">|MENU|</a>
+    <a href="index.html">|MENU|</a>
     <hr>
     <a href="javascrif.html">|REGISTER|</a>
     <hr>
