--- a/pengertiancss.html
+++ b/pengertiancss.html
@@ -18,7 +18,7 @@
    <hr>
    <div class="menu">
     <hr>
-    <a href="index.html.html">|MENU|</a>
+    <a href="index.html">|MENU|</a>
     <hr>
     <a href="javascrif.html">|REGISTER|</a>
     <hr>
