--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <hr>
     <a href="index.html">|MENU|</a>
     <hr>
-    <a href="javascrif.html">|LOGIN|</a>
+    <a href="javascrif.html">|REGISTER|</a>
     <hr>
     <a href="pengertiancss.html">|DEVINISI CSS|</a>
     <hr>
