--- a/javascrif.html
+++ b/javascrif.html
@@ -12,6 +12,7 @@
 <div class="content">
 
   <center><h2>REGISTER</h2></center>
+	 <a href="index.html">|KEMBALI KE MENU|</a>
 	<div class="login">
 		<form action="" method="POST" onSubmit="validasi()">
 			<div>
