--- a/javascrif.html
+++ b/javascrif.html
@@ -33,6 +33,7 @@
 			</div>
 		</form>
 	</div>
+	 <a href="index.html">|KEMBALI KE MENU|</a>
 </body>
 <script type="text/javascript">
 	function validasi() {
