--- a/javascrif.html
+++ b/javascrif.html
@@ -28,13 +28,11 @@
 			</div>
 			<div>
 				<input type="submit" value="Daftar" class="tombol">
-				<tr>
-			        <tr>
-				 <a href="index.html">|KEMBALI KE MENU|</a>
+	
 			</div>
 		</form>
 	</div>
-	 
+	 <center> <a href="index.html">|KEMBALI KE MENU|</a><center>
 </body>
 <script type="text/javascript">
 	function validasi() {
