--- a/produck.html
+++ b/produck.html
@@ -18,8 +18,8 @@
         <a href="about.html">about</a>
         <a href="menu.html">menu</a>
         <a href="produck.html">products</a>
-        <a href="#review">review</a>
-        <a href="#contact">contact</a>
+        <a href="riview.html">review</a>
+        <a href="contact.html">contact</a>
         <a href="detail.html">Tampilkan Semua</a>
     </nav>
 
