--- a/detail.html
+++ b/detail.html
@@ -21,8 +21,8 @@
         <a href="about.html">about</a>
         <a href="menu.html">menu</a>
         <a href="produck.html">products</a>
-        <a href="#review">review</a>
-        <a href="#contact">contact</a>
+        <a href="riview.html">review</a>
+        <a href="contack.html">contact</a>
         <a href="detail.html">Tampilkan Semua</a>
     </nav>
 
@@ -80,8 +80,8 @@
 
     <div class="content">
         <h3>coffee Sunda Hejo</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat labore, sint cupiditate distinctio tempora reiciendis.</p>
-        <a href="#" class="btn">dapatkan sekarang</a>
+        
+        <a href="menu.html" class="btn">dapatkan sekarang</a>
     </div>
 
 </section>
