--- a/contack.html
+++ b/contack.html
@@ -19,7 +19,7 @@
         <a href="about.html">about</a>
         <a href="menu.html">menu</a>
         <a href="produck.html">products</a>
-        <a href="review.html">review</a>
+        <a href="riview.html">review</a>
         <a href="contack.html">contact</a>
         <a href="detail.html">Tampilkan Semua</a>
     </nav>
