--- a/menu.html
+++ b/menu.html
@@ -15,12 +15,12 @@
     </a>
 
     <nav class="navbar">
-        <a href="index.html">home</a>
+       <a href="index.html">home</a>
         <a href="about.html">about</a>
         <a href="menu.html">menu</a>
         <a href="produck.html">products</a>
-        <a href="#review">review</a>
-        <a href="#contact">contact</a>
+        <a href="riview.html">review</a>
+        <a href="contack.html">contact</a>
         <a href="detail.html">Tampilkan Semua</a>
     </nav>
 
@@ -136,9 +136,10 @@
         <a href="index.html">home</a>
         <a href="about.html">about</a>
         <a href="menu.html">menu</a>
-        <a href="#">products</a>
-        <a href="#">review</a>
-        <a href="#">contact</a>
+        <a href="produck.html">products</a>
+        <a href="riview.html">review</a>
+        <a href="contack.html">contact</a>
+        <a href="detail.html">Tampilkan Semua</a>
        
     </div>
 
