--- a/produck.html
+++ b/produck.html
@@ -19,7 +19,7 @@
         <a href="menu.html">menu</a>
         <a href="produck.html">products</a>
         <a href="riview.html">review</a>
-        <a href="contact.html">contact</a>
+        <a href="contack.html">contact</a>
         <a href="detail.html">Tampilkan Semua</a>
     </nav>
 
@@ -157,12 +157,13 @@
     </div>
 
     <div class="links">
-        <a href="#">home</a>
-        <a href="#">about</a>
-        <a href="#">menu</a>
-        <a href="#">products</a>
-        <a href="#">review</a>
-        <a href="#">contact</a>
+        <a href="index.html">home</a>
+        <a href="about.html">about</a>
+        <a href="menu.html">menu</a>
+        <a href="produck.html">products</a>
+        <a href="riview.html">review</a>
+        <a href="contack.html">contact</a>
+        <a href="detail.html">Tampilkan Semua</a>
        
     </div>
 
