--- a/detail.html
+++ b/detail.html
@@ -326,8 +326,8 @@
 <section class="footer">
 
     <div class="share">
-        <a href="#" class="fab fa-facebook-f"></a>
-        <a href="#" class="fab fa-instagram"></a>
+        <a href="https://web.facebook.com/jendra.kamal.96" class="fab fa-facebook-f"></a>
+        <a href="https://www.instagram.com/jen_dra_/" class="fab fa-instagram"></a>
         
     </div>
 
