--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 <section class="footer">
 
     <div class="share">
-        <a href="#" class="fab fa-facebook-f"></a>
-        <a href="#" class="fab fa-instagram"></a>
+        <a href="https://web.facebook.com/jendra.kamal.96" class="fab fa-facebook-f"></a>
+        <a href="https://www.instagram.com/jen_dra_/" class="fab fa-instagram"></a>
         
     </div>
 
