--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         
     </div>
 
-    <div class="credit">created by <span>mr.Jendra Kamal</span> | all rights reserved</div>
+    <div class="credit">created by <span>mr.Jendra Kamal</span> </div>
 
 </section>
 
