--- a/detail.html
+++ b/detail.html
@@ -342,7 +342,7 @@
         
     </div>
 
-    <div class="credit">created by <span>mr.Jendra Kamal</span> | all rights reserved</div>
+    <div class="credit">created by <span>mr.Jendra Kamal</span> </div>
 
 </section>
 
