--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <a href="riview.html">review</a>
         <a href="contack.html">contact</a>
         <a href="detail.html">Tampilkan Semua</a>
-        <a href="add doctor 200061.php">home</a>
+        <a href="add doctor 200061.php">docter clinik</a>
     </nav>
 
     <div class="icons">
